Fixed issue where landing and header overlapped

--- a/styles/indexFlex.css
+++ b/styles/indexFlex.css
@@ -117,7 +117,7 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 25px;
 }
 #landingSection #landing_Left {
     flex: 3;
